Fix steps margin and text-align

--- a/src/pages/Profile/AdvancedProfile.less
+++ b/src/pages/Profile/AdvancedProfile.less
@@ -34,7 +34,10 @@
   font-size: 14px;
   position: relative;
   left: 38px;
-  & > div {
+  padding-top: 8px;
+  text-align: left;
+
+  > div {
     margin-top: 8px;
     margin-bottom: 4px;
   }
